Fix theses table jumping up on infinite scroll, widen title column

--- a/zapisy/apps/theses/assets/theses_app/components/ThesesTable/style.less
+++ b/zapisy/apps/theses/assets/theses_app/components/ThesesTable/style.less
@@ -36,8 +36,15 @@
     padding-top: 5px;
     padding-bottom: 5px;
     white-space: normal;
+}
+
+.title_cell {
     /* See explanation in ThesisTable/index.tsx */
-    width: 400px;
+    width: 550px;
+}
+
+.advisor_cell {
+    width: 250px;
 }
 
 // All headers & the reservation column want horizontal centering
